feat: Grid Based Pane

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       }
     ],
     "paths": {
-      "@types/*": ["./src/common/@types/*"],
+      "$types/*": ["./src/common/@types/*"],
       "@app/*": ["./src/app/*"],
       "@lib/*": ["./src/lib/*"],
       "@components/*": ["./src/components/*"],
