wip(cicd): package.json sync

--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
     "patch": "clear;printf \"\n\n\n\";npm version patch --no-git-tag-version;",
     "minor": "clear;printf \"\n\n\n\";npm version minor --no-git-tag-version;",
     "major": "clear;printf \"\n\n\n\";npm version major --no-git-tag-version;"
-
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
     "next": "14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.4",
+    "typescript": "^5.5.2"
   }
 }
